k8s-manifests/pharma-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharma-ui
  namespace: dev
  labels:
    app: pharma-ui
    version: "1.0.0"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "a44950b0e32b4434e8894d43abdc7839-d74ff78a8f5c5ac1.elb.us-east-1.amazonaws.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pharma-ui
                port:
                  number: 80
